--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
                 </div>
             </div>
         </div>
-    </section> 
+    </section>
+    <section class="footer-box">
+        <div class="footer">
+            <h2 class="">Thanks for visiting Status<span>Code</span></h2>
+        </div>
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
