--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="uv5YEF5jF6MZfdo3oyZymuDFoDhhu72VD_C118uWr8w" />
     <title>StatusCodeFinder</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@500&display=swap" rel="stylesheet">
+    <style>
+    </style>
 </head>
 <body>
     <section class="header">
@@ -23,15 +24,15 @@
     </section>
     <section class="body">
         <div class="main">
-            <div class="box">
+            <div class="box box-animation">
                 <div class="h2-box">
                     <h2 class="">Enter Code</h2>
                 </div>
                 <div class="inp-box">
-                    <input class="input" type="text" placeholder="example: status404 or 404">
+                    <input class="input" type="text" placeholder="example: error404 or 404">
                 </div>
                 <div class="submit-box">
-                    <button onclick="get_info()" class="submit">Submit</button>
+                    <button onclick="get_info(), check_for_invalid()" class="submit">Submit</button>
                 </div>
                 <div class="info-box">
                     <p>
@@ -40,7 +41,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> 
     <section class="footer-box">
         <div class="footer">
             <h2 class="">Thanks for visiting Status<span>Code</span></h2>
