--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         </div>
     </section>
     <section class="body">
+        <div class="greatings-container">
+            <h2 class="great-h2">Welcome to status <span>Code</span>.</h2>
+        </div>
         <div class="main">
             <div class="box box-animation">
                 <div class="h2-box">
@@ -32,7 +35,7 @@
                     <input class="input" type="text" placeholder="example: error404 or 404">
                 </div>
                 <div class="submit-box">
-                    <button onclick="get_info(), check_for_invalid()" class="submit">Submit</button>
+                    <button onclick="get_info(), check_for_inavlid()" class="submit">Submit</button>
                 </div>
                 <div class="info-box">
                     <p>
@@ -44,9 +47,23 @@
     </section> 
     <section class="footer-box">
         <div class="footer">
-            <h2 class="">Thanks for visiting Status<span>Code</span></h2>
+            <h2 class="footer-h2">Thanks for visiting Status<span>Code</span>.</h2>
         </div>
     </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="index.js"></script>
+    <script>
+        // let count = 1
+        // $("button").click(function(){
+
+        //     if (count%2===0){
+        //         $(".info-box").slideUp("fast");
+        //     }
+        //     else{
+        //         $(".info-box").slideDown("fast");
+        //     }
+        //     count++
+        // })
+    </script>
 </body>
 </html>
