--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h2 class="">Enter Code</h2>
                 </div>
                 <div class="inp-box">
-                    <input class="input" type="text" placeholder="example: error404 or 404">
+                    <input class="input" type="text" placeholder="example: status404 or 404">
                 </div>
                 <div class="submit-box">
                     <button onclick="get_info(), check_for_inavlid()" class="submit">Submit</button>
